# cashapp-fynlo

./: .cursorrules  .env.example  .eslint-placeholder  .gitignore  .lintstagedrc.json  .mcp.json  .mcp.json.backup  .pre-commit-config.yaml  .react-hooks-migration.md  .typescript-strict-migration.md  .vercelignore  ADMIN_LOGIN_CHECKLIST.md  ANALYTICS_TASKS.md  About.html  App.tsx  BACKEND_API_ISSUES.md  BACKEND_API_ISSUES_INVESTIGATION.md  BACKEND_API_TASKS.md  BACKEND_INTEGRATION_STATUS.md  BIDIRECTIONAL_SYNC_ARCHITECTURE.md  BREAKING_CHANGES.md  BUILD_PLAN.md  CLAUDE.md  COMPLETION_STATUS.md  CONTEXT.md  CURSOR_SETUP_GUIDE.md  Contact.html  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEVELOPMENT_BRANCHES_GUIDE.md  DIGITALOCEAN_CREDENTIALS_GUIDE.md  DIGITALOCEAN_OPTIMIZATION.md  FYNLO_POS_PROJECT_SUMMARY_FOR_GROK.md  FYNLO_PRODUCTION_IMPLEMENTATION_COMPLETE.md  FYNLO_REMAINING_TASKS_CHECKLIST.md  Fynlo POS Current Issues Analysis & Solutions.md  GDPR_IMPLEMENTATION.md  IOS_APP_TASKS.md  LAST_WORKING_COMMIT.txt  LICENSE  (+113 more)
backend/: .coveragerc  .dockerignore  .env  .env.example  .env.local.example  .env.production.example  .env.test.example  .flake8  .gitignore  .mcp-python-linting.json  CLEANUP_OPPORTUNITIES_REPORT.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_TRIGGER.txt  DEPLOY_HEALTH_FIX.md  DIAGNOSTIC_ENDPOINTS.md  Dockerfile  Dockerfile.prod  ENCRYPTION_README.md  HTTPEXCEPTION_MIGRATION_ANALYSIS.md  HTTPEXCEPTION_MIGRATION_COMPLETE.md  MENU_MANAGEMENT.md  MIDDLEWARE_ENABLEMENT_REPORT.md  MIGRATIONS_GUIDE.md  MIGRATION_REPORT.json  PR_GUARDIAN_ANALYSIS_455.json  PR_GUARDIAN_FINAL_REPORT.json  PR_GUARDIAN_REPORT_455.md  PR_GUARDIAN_SCAN_REPORT.json  Procfile  README.md  REMOVED_TEST_FILES.md  SECURITY.md  SECURITY_AUDIT_ERROR_HANDLING_REPORT.md  SECURITY_AUDIT_HTTPEXCEPTION_TO_FYNLOEXCEPTION.md  SECURITY_MIGRATION_GUIDE.md  SENDGRID_TO_RESEND_MIGRATION.md  (+147 more)
backend/RYAN DOCS/: BACKEND_IMPLEMENTATION_CHECKLIST.md  COMPREHENSIVE_ISSUE_RESOLUTION_PLAN.md  CRITICAL_BUG_FIXES_IMPLEMENTATION_PLAN.md  README.md
backend/alembic/: env.py
backend/app/: __init__.py  debug_deployment.py  main.py  main_minimal.py  main_simple.py  models.py  simple_main.py
backend/backend/: PR_GUARDIAN_SCAN_REPORT.json  fix_all_python_syntax.py
backend/backup/: auth.py.bak  customers.py.bak  orders.py.bak  payments.py.bak  platform_admin.py.bak  recipes.py.bak
backend/certs/: ca-certificate.crt  square-certificate-signing-request.csr
backend/config/: payment_config_development.json  payment_config_production.json
backend/deploy/: Dockerfile  docker-compose.yml  nginx.conf  nginx.prod.conf  production_env_variables.md  replica_monitoring.md  spec.yaml
backend/docs/: MIGRATION_GUIDE.md  RLS_IMPLEMENTATION.md  auth_rate_limiting.md  redis_security_fallback.md  sumup_integration.md  sumup_security_fix.md  supabase_auth_metadata_update.md
backend/fixes/: fix_employee_endpoints.py  fix_websocket_auth.py
backend/scripts/: DATABASE_MIGRATION_README.md  README.md  __init__.py  achieve_100_percent_quality.py  analyze_exception_usage.py  check_httpexception_usage.py  cleanup_httpexception_imports.py  cleanup_unused_httpexception_imports.py  comprehensive_syntax_fix.py  convert_prints_to_logger.py  create_all_tables.sql  create_carlos_user.sql  create_demo_users.sql  create_essential_tables.sql  create_migration_summary.py  create_restaurant.py  deploy_menu_fix.sh  detailed_exception_analysis.py  digitalocean_migration.sh  final_pr_guardian_check.py  fix_all_httpexception_issues.py  fix_all_issues.py  fix_all_syntax_errors.py  fix_docstring_formatting.py  (+41 more)
(+5319 files in other folders)
